@@ -77,6 +77,9 @@ var _connect = function(_self) {
 
       // If the number of open connections is equal to the poolSize signal ready pool
       if(_self.connections.length === _self.poolSize && _self._poolState !== 'disconnected') {
+        // Set connected
+        _self._poolState = 'connected';
+        // Emit pool ready
         _self.emit("poolReady");
       } else if(_self.connections.length < _self.poolSize) {
         // We need to open another connection, make sure it's in the next
@@ -205,8 +208,7 @@ ConnectionPool.prototype.stop = function(removeListeners) {
 
 // Check the status of the connection
 ConnectionPool.prototype.isConnected = function() {
-  // return this.connections.length > 0;
-  return this._poolState !== 'disconnected';
+  return this._poolState === 'connected';
 }
 
 // Checkout a connection from the pool for usage, or grab a specific pool instance
